# AI-Expense-Budget-Tracker

./: .gitignore  .vercelignore  ALL_PAGES_UPDATED.md  BUG_FIXES.md  CHART_IMPROVEMENTS.md  DEPLOYMENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  FINAL_FIX.md  MINIMAL_UI_DESIGN.md  ML_CATEGORIZER_IMPROVEMENT.md  OPTIMIZATION_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  PREDICTION_FIX_SUMMARY.md  QUICK_START.txt  README.md  README_FINAL.md  REAL_DATA_CHARTS.md  REPORTS_PAGE_FIX.md  ROBUST_ML_REPORT.md  ULTRA_HIGH_ACCURACY_MODEL.md  VERCEL_COMPLETE_FIX.md  VERCEL_DEPLOYMENT.md  VERCEL_FIXES.md  migrate_db.py  pyproject.toml  requirements.txt  retrain_model.py  run_demo.py  start_optimized.bat  test_advanced_categorizer.py  test_enhanced_categorizer.py  test_enhancedtest_enhanced_categorizer.py  test_issue.py  test_minimal_theme.py  test_ml_predictions.py  test_predictions.py  test_robust_ml.py  test_transactions.py  vercel.json  verify_ml.py
api/: index.py
backend/: app.py  app_optimized.py  optimize_database.py  test_imports.bat  test_imports.py  tmpclaude-d856-cwd
backend/database/: init_db.py  schema.sql  setup_db.py  setup_postgres.py
backend/ml_models/: advanced_expense_categorizer.py  budget_predictor.py  enhanced_expense_categorizer.py  expense_categorizer.py  high_accuracy_categorizer.py  optimized_categorizer.py  robust_categorizer.py  ultra_high_accuracy_categorizer.py
backend/models/: __init__.py  budget_planner.py  category_manager.py  transaction.py  user_profile.py
backend/services/: auth_service.py  budget_service.py  db_service.py  db_service_optimized.py  (+5 more)
(+39 files in other folders)
